hphp/test/slow/using/empty-exprs.php.expectf

Fatal error: syntax error, unexpected ')' in %s/test/slow/using/empty-exprs.php on line 4
